--- a/index.html
+++ b/index.html
@@ -1,2 +1,82 @@
-<!-- Author:RunFox GitHub:run-fox/run-fox.github.io  -->
-<script language="javascript"> location.replace("/welcome/") </script>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="renderer"
+			  content="webkit" />
+		<meta http-equiv="X-UA-Compatible"
+			  content="IE=edge,chrome=1" />
+		<meta name="force-rendering"
+			  content="webkit" />
+		<meta name="viewport"
+			  content="width=device-width, initial-scale=1">
+		<meta name="description"
+			  content="RunFox Welcome Page">
+		<meta name="keywords"
+			  content="RunFox,奔狐,伦福克斯,Welcome,欢迎,Page,页">
+		<meta name="author"
+			  content="RunFox">
+		<title>RunFox Welcome Page</title>
+		<link rel="stylesheet"
+			  type="text/css"
+			  href="./style.css">
+		<link rel="icon"
+			  href="./favicon.ico">
+	</head>
+	<header id="panel"
+			class="panel-cover">
+		<div class="panel-main">
+			<div class="panel-main__inner panel-inverted">
+				<div class="panel-main__content">
+					<div class="ih-item circle effect right_to_left">
+						<a class="blog-button">
+							<div class="img">
+								<img src="./logo.png"
+									 alt="img"
+									 class="js-avatar iUp profilepic">
+							</div>
+							<div class="info iUp">
+								<div class="info-back">
+									<h2>Run Fox</h2>
+									<p>
+										<script>
+											document.write(new Date().getFullYear())
+										</script>
+									</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<h1 class="panel-cover__title panel-title iUp">
+						<br />RunFox Welcome Page</h1>
+					<p class="panel-cover__subtitle panel-subtitle iUp">Welcome to the RunFox Home Page</p>
+					<p id="description"
+					   class="panel-cover__description iUp">The world opens itself before those with noble hearts.
+						<br />
+						<strong>-「Statue of The Seven」</strong>
+					</p>
+					<br>
+					<br>
+					<div>
+						<div>
+							<nav>
+								<ul class="navigation">
+									<li class="navigation__item">
+										<a href="https://runfox.net/home/">
+											<div>RunFox Home Page</div>
+										</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<script type="text/javascript"
+			src="./jquery.min.js"></script>
+	<script type="text/javascript"
+			src="./main.js"></script>
+	</body>
+</html>
