--- a/welcome/index.html
+++ b/welcome/index.html
@@ -63,7 +63,7 @@
 							<nav>
 								<ul class="navigation">
 									<li class="navigation__item">
-										<a href="https://runfox.net/home/">
+										<a href="https://run-fox.github.io/home/">
 											<div>RunFox Home Page</div>
 										</a>
 									</li>
